tensor/keras notebook upload

--- a/scikit-learn/03_3-titanic_model_comparison_interpretability.ipynb
+++ b/scikit-learn/03_3-titanic_model_comparison_interpretability.ipynb
@@ -1040,6 +1040,11 @@
     "  - `feature_importances_` is **not available** for HistGradientBoosting, so we used **Permutation Importance** (model-agnostic).\n",
     "  - **SHAP** was applied with `check_additivity=False` (a common workaround for HGB). This gave both global explanations (summary plot) and local explanations (force plots).\n",
     "\n",
+    "- Best model: HistGradientBoosting (after GridSearch).\n",
+    "- Performance: Good generalization (AUC ~0.82).\n",
+    "- Key insights: Sex, fare, and class strongly influence survival.\n",
+    "- Interpretability: Permutation Importance + SHAP provided trust and transparency.\n",
+    "\n",
     "**Next steps to improve the project**\n",
     "- Add engineered features (e.g., `family_size = sibsp + parch`, extract `title` from passenger names if using Kaggle CSV).\n",
     "- Explore more extensive hyperparameter search (`RandomizedSearchCV`) or Bayesian optimization.\n",
